--- a/taxicab.conf
+++ b/taxicab.conf
@@ -1,7 +1,9 @@
 # Config File for Taxicab Simulation
 SO_TAXI             2
+SO_TAXI             1
 SO_SOURCES          2
 SO_HOLES            3
+SO_HOLES            6
 SO_CAP_MIN          1
 SO_CAP_MAX          5
 SO_TIMENSEC_MIN     5        # in ms
@@ -10,3 +12,5 @@ SO_TIMEOUT          250      # in ms
 SO_DURATION         10       # in seconds
 SO_WIDTH            4
 SO_HEIGHT           4
+SO_WIDTH     # Modificare in general.h
+SO_HEIGHT    # Modificare in general.h
