--- a/taxicab.conf
+++ b/taxicab.conf
@@ -1,12 +1,13 @@
 # Config File for Taxicab Simulation
-SO_TAXI             2
-SO_SOURCES          2
-SO_HOLES            3
-SO_CAP_MIN          1
+SO_TAXI             400
+SO_SOURCES          19
+SO_HOLES            94
+SO_TOP_CELLS        40
+SO_CAP_MIN          3
 SO_CAP_MAX          5
-SO_TIMENSEC_MIN     5        # in ms
-SO_TIMENSEC_MAX      50       # in ms
-SO_TIMEOUT          250      # in ms
-SO_DURATION         10       # in seconds
-SO_WIDTH            4
-SO_HEIGHT           4
+SO_TIMENSEC_MIN     100000        # in ns
+SO_TIMENSEC_MAX     1000000       # in ns
+SO_TIMEOUT          1000000000      # in ns
+SO_DURATION         15        # in seconds
+SO_WIDTH            # Modificare in general.h
+SO_HEIGHT           # Modificare in general.h
